# micropython-papers3m5

./: .cursorrules  .gitignore  README.md
demo/: README.md  display_specs.py  display_specs_example.py  screen_range_test.py  test.py  wifi_scanner.py
docs/: COLOR_FIX_SUMMARY.md  DISPLAY_SPECS.md  FONTS.md  WIFI_UI_LAYOUT_PLAN.md
papers3/: FONT_METRICS.md  _boot.py  board.json  epd_board_papers3.c  flashbdev.py  inisetup.py  manifest.py  micropython.cmake  modpapers3.c  mpconfigboard.cmake  mpconfigboard.h  papers3_battery.c  papers3_button.c  papers3_buzzer.c  test.py  (+8 more)
papers3-esp-demo/: CMakeLists.txt  README.md  partitions.csv
papers3-esp-demo/components/Arduino_BMI270_BMM150/: .codespellrc  CHANGELOG  CMakeLists.txt  LICENSE  README.md  keywords.txt  library.properties
papers3-esp-demo/components/Arduino_BMI270_BMM150/docs/: api.md  readme.md
papers3-esp-demo/components/Arduino_BMI270_BMM150/examples/Interrupts_subclassing/: Interrupts_subclassing.ino
papers3-esp-demo/components/Arduino_BMI270_BMM150/examples/SimpleAccelerometer/: SimpleAccelerometer.ino
papers3-esp-demo/components/Arduino_BMI270_BMM150/examples/SimpleGyroscope/: SimpleGyroscope.ino
papers3-esp-demo/components/Arduino_BMI270_BMM150/examples/SimpleMagnetometer/: SimpleMagnetometer.ino
papers3-esp-demo/components/Arduino_BMI270_BMM150/src/: Arduino_BMI270_BMM150.h  BMI270.cpp  BoschSensorClass.h
papers3-esp-demo/components/Arduino_BMI270_BMM150/src/utilities/BMI270-Sensor-API/: bmi2.c  bmi270_context.c  bmi270_legacy.c  bmi270_legacy.h  bmi270_maximum_fifo.c  bmi270_maximum_fifo.h
papers3-esp-demo/components/Arduino_BMI270_BMM150/src/utilities/BMM150-Sensor-API/: Interrupt_settings.md  bmm150.c  bmm150.h  bmm150_defs.h
papers3-esp-demo/components/PNGdec/: CMakeLists.txt
papers3-esp-demo/components/PNGdec/src/: PNGdec.cpp  PNGdec.h  png.inl
papers3-esp-demo/components/TFT_eSPI/: CMakeLists.txt  Kconfig  TFT_config.h  TFT_eSPI.cpp  TFT_eSPI.h
papers3-esp-demo/components/TFT_eSPI/Extensions/: Sprite.cpp  Sprite.h
papers3-esp-demo/components/TFT_eSPI/Fonts/: font_render.cpp  font_render.h
papers3-esp-demo/main/: CMakeLists.txt  ED047TC1Driver.h  GT911.cpp  GT911.h  I2C_BM8563.cpp  I2C_BM8563.h  LGFXPaperS3.hpp  PNGManager.cpp  PNGManager.hpp  binaryttf.h  main.cpp
papers3-esp-demo/main/resources/: buzzer_off  buzzer_on  charge  logo  ui
(+38 files in other folders)
